Fixed error in image url

--- a/pages/Jazz Music.html
+++ b/pages/Jazz Music.html
@@ -5,7 +5,7 @@
     note.</p>
 <a id="Scott Joplin"></a>
 <h3>Scott Joplin</h3>
-<img src="assets/media/image-14.jpg"><img src="assets/media/image-13.png">
+<img src="assets/media/Image-14.jpg"><img src="assets/media/Image-13.png">
 <p>Scott Joplin (ca. 1867 – April 1, 1917) was an American composer and pianist. Joplin achieved fame for his ragtime
     compositions, and was later dubbed “The King of Ragtime”. During his brief career, Joplin wrote 44 original ragtime
     pieces, one ragtime ballet, and two operas. One of his first pieces, the “Maple Leaf Rag”, became ragtime 's first
@@ -27,7 +27,7 @@
     to wide acclaim in 1972. In 1976, Joplin was posthumously awarded a Pulitzer Prize.</p>
 <a id="Louis Armstrong"></a>
 <h3>Louis Armstrong</h3>
-<img src="assets/media/image-12.jpg"><img src="assets/media/image-11.png">
+<img src="assets/media/Image-12.jpg"><img src="assets/media/Image-11.png">
 <p>Louis Armstrong (August 4, 1901 – July 6, 1971), nicknamed Satchmoor Pops, was an American jazz trumpeter and singer
     from New Orleans, Louisiana. Coming to prominence in the 1920s as an “inventive” cornet and trumpet player,
     Armstrong was a foundational influence in jazz, shifting the music’s focus from collective improvisation to solo
@@ -46,7 +46,7 @@
     of the Civil Rights movement in America.</p>
 <a id="Edward Kennedy 'duke' Ellington"></a>
 <h3>Edward Kennedy 'duke' Ellington</h3>
-<img src="assets/media/image-10.jpg">
+<img src="assets/media/Image-10.jpg">
 <p>Edward Kennedy “Duke” Ellington (April 29, 1899 – May 24, 1974) was an American composer, pianist, and big
     bandleader. Ellington wrote over 1,000 compositions. In the words of Bob Blumenthal of The Boston Globe “In the
     century since his birth, there has been no greater composer, American or otherwise, than Edward Kennedy Ellington.”
