--- a/pages/Romantic Period.html
+++ b/pages/Romantic Period.html
@@ -16,7 +16,7 @@
     only purely abstract, but also frequently drawn from other art-form sources such as literature or history
     (historical figures) or nature itself</p>
 <a id="Franz Schubert"></a><h3>Franz Schubert</h3>
-<img src="assets/media/image-26.jpg"><img src="assets/media/image-25.png">
+<img src="assets/media/Image-26.jpg"><img src="assets/media/Image-25.png">
 <p>Franz Peter Schubert (January 31, 1797 – November 19, 1828) was an Austrian composer. He wrote some 600 Lieder, nine
     symphonies (including the famous “Unfinished Symphony”), liturgical music, operas, some incidental music, and a
     large body of chamber and solo piano music. He is particularly noted for his original melodic and harmonic writing.
@@ -32,7 +32,7 @@
     musicologist Sir George Grove. Franz Schubert is now widely considered to be one of the greatest composers in the
     Western tradition.</p>
 <a id="Frdric Chopin 20"></a><h3>Frédéric Chopin</h3>
-<img src="assets/media/image-28.jpg"><img src="assets/media/image-27.png">
+<img src="assets/media/Image-28.jpg"><img src="assets/media/Image-27.png">
 <p>Frédéric François Chopin (1 March 1810 – 17 October 1849) was a Polishcomposer and virtuosopianist. He was one of the
     great masters of Romantic music.</p>
 <p>Chopin was born in the village of Żelazowa Wola, in the Duchy of Warsaw, to a French-expatriate father and Polish
@@ -51,7 +51,7 @@
     the “Military,” and the Polonaise in A-flat major, Op. 53, the “Heroic,” are among Chopin’s best-loved and
     most-often-played works.</p>
 <a id="Felix Mendelssohn"></a><h3>Felix Mendelssohn</h3>
-<img src="assets/media/image-23.jpg">
+<img src="assets/media/Image-23.jpg">
 <p>Jakob Ludwig Felix Mendelssohn Bartholdy, born, and generally known in English-speaking countries, as Felix
     Mendelssohn(February 3, 1809 – November 4, 1847) was a Germancomposer, pianist, organist and conductor of the early
     Romantic period.</p>
@@ -71,7 +71,7 @@
     from Mendelssohn’s cantata ‗Festgesang’—is the standard tune for Charles Wesley’s popular hymn ‘Hark! The Herald
     Angels Sing’</p>
 <a id="Robert Schumann"></a><h3>Robert Schumann</h3>
-<img src="assets/media/image-38.jpg"><img src="assets/media/image-37.png">
+<img src="assets/media/Image-38.jpg"><img src="assets/media/Image-37.png">
 <p>Robert Schumann, sometimes given as Robert Alexander Schumann, (8 June 1810 – </p>
 <p>29 July 1856) was a German composer, aesthete and influential music critic. He is one of the most famous and
     important Romantic composers of the 19th century.</p>
@@ -91,7 +91,7 @@
     and B; in German these are A, Es, C and H, and As C and H respectively), the town (then in Bohemia, now in the Czech
     Republic) in which Ernestine was born, and the notes are also the musical letters in Schumann’s own name.</p>
 <a id="Franz Liszt"></a><h3>Franz Liszt</h3>
-<img src="assets/media/image-24.jpg">
+<img src="assets/media/Image-24.jpg">
 <p>Franz Liszt (Hungarian: Ferencz Liszt, in modern usage Ferenc Liszt, from 1859 to 1865 officially Franz Ritter von
     Liszt) (October 22, 1811 – July 31, 1886) was a Hungariancomposer, virtuosopianist and teacher.</p>
 <p>He was also the father-in-law of Richard Wagner. Liszt became renowned throughout Europe during the 19th century for
@@ -114,7 +114,7 @@
     Faust Symphony and the first “Mephisto Waltz” as well as the “Liebesträume No. 3” and the two volumes of his “Buch
     der Lieder”.</p>
 <a id="Giuseppe Verdi"></a><h3>Giuseppe Verdi</h3>
-<img src="assets/media/image-29.jpg">
+<img src="assets/media/Image-29.jpg">
 <p>Giuseppe Fortunino Francesco Verdi (October 9 or 10, 1813 – January 27, 1901) was an Italian Romanticcomposer, mainly
     of opera. He was one of the most influential composers of the 19th century. His works are frequently performed in
     opera houses throughout the world and, transcending the boundaries of the genre, some of his themes have long since
@@ -129,7 +129,7 @@
     the corrosive effects of power, love of country with the inevitable call for sacrifice and death, and the lure of
     passion with the need for social order.</p>
 <a id="Richard Wagner"></a><h3>Richard Wagner</h3>
-<img src="assets/media/image-36.jpg"><img src="assets/media/image-35.png">
+<img src="assets/media/Image-36.jpg"><img src="assets/media/Image-35.png">
 <p>Wilhelm Richard Wagner (22 May 1813 – 13 February 1883) was a Germancomposer, conductor, theatre director and
     essayist, primarily known for his operas (or “music dramas”, as they were later called). Unlike most other opera
     composers, Wagner wrote both the music and libretto for every one of his works.</p>
@@ -149,7 +149,7 @@
     works are widely performed today. Some are of the opinion that Tristan und Isolde (Tristan and Iseult) is Wagner’s
     greatest single opera.</p>
 <a id="Pyotr Ilyich Tchaikovsky"></a><h3>Pyotr Ilyich Tchaikovsky</h3>
-<img src="assets/media/image-34.jpg"><img src="assets/media/image-33.png">
+<img src="assets/media/Image-34.jpg"><img src="assets/media/Image-33.png">
 <p>Pyotr Ilyich Tchaikovsky[a 1] (7 May 1840– 6 November 1893) often called Peter Ilich Tchaikovsky in English, was a
     Russian composer of the Romantic era. He wrote some of the most popular concert and theatrical music in the current
     classical repertoire, including the ballets Swan Lake, The Sleeping Beauty and The Nutcracker, the 1812 Overture,
@@ -168,7 +168,7 @@
     the concert halls of the world. His sudden death at the age of 53 is generally ascribed to cholera, but some
     attribute it to suicide.</p>
 <a id="Hector Berlioz"></a><h3>Hector Berlioz</h3>
-<img src="assets/media/image-30.jpg">
+<img src="assets/media/Image-30.jpg">
 <p>Hector Berlioz (December 11, 1803 – March 8, 1869) was a French Romanticcomposer, best known for his compositions
     Symphonie fantastique and Grande Messe des morts (Requiem). Berlioz made significant contributions to the modern
     orchestra with his Treatise on Instrumentation.</p>
@@ -178,7 +178,7 @@
     writing musical criticism, utilizing a bold, vigorous style, at times imperious and sarcastic. He wrote for many
     journals, including Le Rénovateur, Journal des débats and Gazette musicale.</p>
 <a id="Maurice Ravel"></a><h3>Maurice Ravel</h3>
-<img src="assets/media/image-32.jpg">
+<img src="assets/media/Image-32.jpg">
 <p>Joseph-Maurice Ravel (March 7, 1875 – December 28, 1937) was a French composer of Impressionist music known
     especially for his melodies, orchestral and instrumental textures and effects. Much of his piano music, chamber
     music, vocal music and orchestral music has entered the standard concert repertoire.</p>
@@ -191,7 +191,7 @@
     2008 in most countries. In France, due to anomalous copyright law extensions to account for the two world wars, they
     will not enter the public domain until 2015.</p>
 <a id="Johannes Brahms"></a><h3>Johannes Brahms</h3>
-<img src="assets/media/image-31.png">
+<img src="assets/media/Image-31.png">
 <p>He was born in Germany. At 13th age he led a doubled life. During the day he studied piano, theory and compositions;
     at night he played dance music in cafes. Brahms wanted to become a conductor of the philharmonic orchestra. He
     conducted Viennese Music Society and introduced many forgotten works of Bach, Handle and Mozart. He had a wide
@@ -204,7 +204,7 @@
     the melody than the voice while not by any means reducing the piano part to a mere subordinate accompaniment. He
     tends overall to tip the balance in favors of the voice</p>
 <a id="Claude Debussy"></a><h3>Claude Debussy</h3>
-<img src="assets/media/image-22.jpg">
+<img src="assets/media/Image-22.jpg">
 <p>Claude Debussy ( 22 August 1862 – 25 March 1918 ) was a French composer. He is sometimes seem as the first
     impressionist composer. He was among the most influential composers of the late 19th and 20th centuries. Born to a
     family of modest means and little cultural involvement, Debussy showed enough musical talent to be admitted at the
