changed the love symbol

--- a/article.html
+++ b/article.html
@@ -48,7 +48,7 @@
         </main>
         <footer>
             <hr color="grey" width="40%"/>
-            <div class="my-1 text-center">Made with ❤️ by Developers @ Computer Society of Royal College</strong>
+            <div class="my-1 text-center" style="font-size: 0.9rem;">by Developers @ Computer Society of Royal College</strong>
             <hr color="grey" width="40%"/>
         </footer>
         <script type="text/javascript" src="data/contents.js"></script>
