--- a/article.html
+++ b/article.html
@@ -48,7 +48,11 @@
         </main>
         <footer>
             <hr color="grey" width="40%"/>
-            <div class="my-1 text-center" style="font-size: 0.9rem;">by Developers @ Computer Society of Royal College</strong>
+            <div class="my-1 text-center" style="font-size: 0.9rem;">A project by Royal College Western Music Society & Royal College Computer Society</div>
+            <div><center>
+                <img height="120" src="assets/wms_logo.png" />
+                <img height="120" src="assets/rccs_logo.png" />
+            </center></div>
             <hr color="grey" width="40%"/>
         </footer>
         <script type="text/javascript" src="data/contents.js"></script>
