--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </ul>
         </nav>
         <main>
-            <div class="container-fluid py-sm-3 mb-5 text-center">
+            <div class="container-fluid welcome-div py-sm-3 mb-5 text-center">
                 <h1 class="display-2 txt-glow py-sm-4 mx-auto my-3 my-sm-5">Discover the<br/>Real Music</h1>
                 <div class="py-1"><a href="#contentSection" class="btn btn-outline-light btn-lg">
                     Get Started
@@ -63,7 +63,11 @@
         </main>
         <footer>
             <hr color="grey" width="40%"/>
-            <div class="my-1 text-center" style="font-size: 0.9rem;">by Developers @ Computer Society of Royal College</strong>
+            <div class="my-1 text-center" style="font-size: 0.9rem;">A project by Royal College Western Music Society & Royal College Computer Society</div>
+            <div><center>
+                <img height="120" src="assets/wms_logo.png" />
+                <img height="120" src="assets/rccs_logo.png" />
+            </center></div>
             <hr color="grey" width="40%"/>
         </footer>
         <script type="text/javascript" src="data/contents.js"></script>
