--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <link rel="icon" type="image/png" href="assets/favicon.png"/>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
-        <title>The Western Music</title>
+        <title>Guide to Western Music</title>
     </head>
     <body>
         <nav class="container navbar">
             <a href class="navbar-brand ml-md-4 d-flex align-items-center">
                 <img style="margin: 0;" height="30" src="assets/logoWesternMusic.png"/>
-                <strong class="ml-2">The Western Music</strong>
+                <strong class="ml-2">Guide to Western Music</strong>
             </a>
             <ul class="nav">
                 <li class="nav-item mx-1"><a class="btn btn-light btn-sm" href>
