--- a/article.html
+++ b/article.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="og:title" content="The Western Music">
+        <meta name="og:title" content="Guide to Western Music">
         <meta name="og:type" content="website">
         <meta name="og:url" content="https://developers-rccs.github.io/wstrn-music-site/">
         <meta name="og:image" content="https://developers-rccs.github.io/wstrn-music-site/assets/logoWesternMusic.png">
@@ -11,13 +11,13 @@
         <link rel="icon" type="image/png" href="assets/favicon.png"/>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
-        <title>The Western Music</title>
+        <title>Book | Guide to Western Music</title>
     </head>
     <body>
         <nav class="container navbar">
             <a href="index.html" class="navbar-brand ml-md-4 d-flex align-items-center">
                 <img style="margin: 0;" height="30" src="assets/logoWesternMusic.png"/>
-                <strong class="ml-2">The Western Music</strong>
+                <strong class="ml-2">Guide to Western Music</strong>
             </a>
             <ul class="nav">
                 <li class="nav-item mx-1"><a class="btn btn-outline-light btn-sm" href="index.html">
