--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="og:title" content="The Western Music">
+        <meta name="og:title" content="Guide to Western Music">
         <meta name="og:type" content="website">
         <meta name="og:url" content="https://developers-rccs.github.io/wstrn-music-site/">
         <meta name="og:image" content="https://developers-rccs.github.io/wstrn-music-site/assets/logoWesternMusic.png">
